[gd_scene load_steps=3 format=3 uid="uid://cpg258di3hcl6"]

[ext_resource type="Script" path="res://Scripts/diana_manual.gd" id="1_4omnc"]
[ext_resource type="Texture2D" uid="uid://c7lhi4bxj7lvx" path="res://image/diana.jpg" id="1_bs24g"]

[node name="diana_manual" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4omnc")

[node name="Diana" type="Sprite2D" parent="."]
position = Vector2(575, 325)
rotation = -0.15708
scale = Vector2(0.715, 0.715)
texture = ExtResource("1_bs24g")

[node name="Triples" type="CanvasLayer" parent="."]

[node name="1" type="Button" parent="Triples"]
offset_left = 601.0
offset_top = 165.0
offset_right = 650.0
offset_bottom = 188.0
rotation = 0.261799
flat = true

[node name="2" type="Button" parent="Triples"]
offset_left = 637.0
offset_top = 453.0
offset_right = 686.0
offset_bottom = 476.0
rotation = -0.640536
flat = true

[node name="3" type="Button" parent="Triples"]
offset_left = 551.0
offset_top = 464.0
offset_right = 599.0
offset_bottom = 487.0
flat = true

[node name="4" type="Button" parent="Triples"]
offset_left = 688.0
offset_top = 209.0
offset_right = 739.0
offset_bottom = 232.0
rotation = 0.897099
flat = true

[node name="5" type="Button" parent="Triples"]
offset_left = 502.0
offset_top = 180.0
offset_right = 549.0
offset_bottom = 203.0
rotation = -0.321141
flat = true

[node name="6" type="Button" parent="Triples"]
offset_left = 737.0
offset_top = 301.0
offset_right = 784.0
offset_bottom = 324.0
rotation = 1.5708
flat = true

[node name="7" type="Button" parent="Triples"]
offset_left = 475.0
offset_top = 424.0
offset_right = 521.0
offset_bottom = 447.0
rotation = 0.640536
flat = true

[node name="8" type="Button" parent="Triples"]
offset_left = 427.0
offset_top = 398.0
offset_right = 476.0
offset_bottom = 421.0
rotation = -1.86052
flat = true

[node name="9" type="Button" parent="Triples"]
offset_left = 431.0
offset_top = 249.0
offset_right = 479.0
offset_bottom = 272.0
rotation = -0.897099
flat = true

[node name="10" type="Button" parent="Triples"]
offset_left = 698.0
offset_top = 391.0
offset_right = 746.0
offset_bottom = 414.0
rotation = -1.28282
flat = true

[node name="11" type="Button" parent="Triples"]
offset_left = 438.0
offset_top = 303.0
offset_right = 483.0
offset_bottom = 326.0
rotation = 1.5708
flat = true

[node name="12" type="Button" parent="Triples"]
offset_left = 462.0
offset_top = 210.0
offset_right = 509.0
offset_bottom = 233.0
rotation = -0.6353
flat = true

[node name="13" type="Button" parent="Triples"]
offset_left = 714.0
offset_top = 306.0
offset_right = 762.0
offset_bottom = 329.0
rotation = -1.90415
flat = true

[node name="14" type="Button" parent="Triples"]
offset_left = 452.0
offset_top = 260.0
offset_right = 498.0
offset_bottom = 283.0
rotation = 1.90415
flat = true

[node name="15" type="Button" parent="Triples"]
offset_left = 675.0
offset_top = 428.0
offset_right = 725.0
offset_bottom = 451.0
rotation = -1.01578
flat = true

[node name="16" type="Button" parent="Triples"]
offset_left = 447.0
offset_top = 388.0
offset_right = 494.0
offset_bottom = 411.0
rotation = 0.888373
flat = true

[node name="17" type="Button" parent="Triples"]
offset_left = 597.0
offset_top = 464.0
offset_right = 644.0
offset_bottom = 487.0
rotation = -0.253073
flat = true

[node name="18" type="Button" parent="Triples"]
offset_left = 650.0
offset_top = 179.0
offset_right = 702.0
offset_bottom = 202.0
rotation = 0.633555
flat = true

[node name="19" type="Button" parent="Triples"]
offset_left = 510.0
offset_top = 449.0
offset_right = 561.0
offset_bottom = 472.0
rotation = 0.331613
flat = true

[node name="20" type="Button" parent="Triples"]
offset_left = 549.0
offset_top = 165.0
offset_right = 600.0
offset_bottom = 188.0
flat = true

[node name="Simples" type="CanvasLayer" parent="."]

[node name="1" type="Button" parent="Simples"]
offset_left = 619.0
offset_top = 96.0
offset_right = 668.0
offset_bottom = 163.0
rotation = 0.261799
flat = true

[node name="2" type="Button" parent="Simples"]
offset_left = 652.0
offset_top = 472.0
offset_right = 701.0
offset_bottom = 535.0
rotation = -0.640536
flat = true

[node name="3" type="Button" parent="Simples"]
offset_left = 550.0
offset_top = 492.0
offset_right = 598.0
offset_bottom = 554.0
flat = true

[node name="4" type="Button" parent="Simples"]
offset_left = 743.0
offset_top = 167.0
offset_right = 794.0
offset_bottom = 230.0
rotation = 0.897099
flat = true

[node name="5" type="Button" parent="Simples"]
offset_left = 482.0
offset_top = 116.0
offset_right = 529.0
offset_bottom = 175.0
rotation = -0.321141
flat = true

[node name="6" type="Button" parent="Simples"]
offset_left = 802.0
offset_top = 300.0
offset_right = 849.0
offset_bottom = 360.0
rotation = 1.5708
flat = true

[node name="7" type="Button" parent="Simples"]
offset_left = 458.0
offset_top = 446.0
offset_right = 504.0
offset_bottom = 505.0
rotation = 0.640536
flat = true

[node name="8" type="Button" parent="Simples"]
offset_left = 367.0
offset_top = 417.0
offset_right = 416.0
offset_bottom = 476.0
rotation = -1.86052
flat = true

[node name="9" type="Button" parent="Simples"]
offset_left = 373.0
offset_top = 209.0
offset_right = 427.0
offset_bottom = 267.0
rotation = -0.897099
flat = true

[node name="10" type="Button" parent="Simples"]
offset_left = 728.0
offset_top = 404.0
offset_right = 782.0
offset_bottom = 464.0
rotation = -1.28282
flat = true

[node name="11" type="Button" parent="Simples"]
offset_left = 408.0
offset_top = 303.0
offset_right = 453.0
offset_bottom = 366.0
rotation = 1.5708
flat = true

[node name="12" type="Button" parent="Simples"]
offset_left = 424.0
offset_top = 157.0
offset_right = 471.0
offset_bottom = 213.0
rotation = -0.6353
flat = true

[node name="13" type="Button" parent="Simples"]
offset_left = 745.0
offset_top = 296.0
offset_right = 793.0
offset_bottom = 353.0
rotation = -1.90415
flat = true

[node name="14" type="Button" parent="Simples"]
offset_left = 425.0
offset_top = 249.0
offset_right = 478.0
offset_bottom = 309.0
rotation = 1.90415
flat = true

[node name="15" type="Button" parent="Simples"]
offset_left = 699.0
offset_top = 445.0
offset_right = 749.0
offset_bottom = 502.0
rotation = -1.01578
flat = true

[node name="16" type="Button" parent="Simples"]
offset_left = 422.0
offset_top = 403.0
offset_right = 469.0
offset_bottom = 458.0
rotation = 0.888373
flat = true

[node name="17" type="Button" parent="Simples"]
offset_left = 604.0
offset_top = 491.0
offset_right = 655.0
offset_bottom = 549.0
rotation = -0.253073
flat = true

[node name="18" type="Button" parent="Simples"]
offset_left = 689.0
offset_top = 124.0
offset_right = 741.0
offset_bottom = 180.0
rotation = 0.633555
flat = true

[node name="19" type="Button" parent="Simples"]
offset_left = 497.0
offset_top = 478.0
offset_right = 548.0
offset_bottom = 538.0
rotation = 0.331613
flat = true

[node name="20" type="Button" parent="Simples"]
offset_left = 549.0
offset_top = 97.0
offset_right = 600.0
offset_bottom = 157.0
flat = true

[node name="Dobles" type="CanvasLayer" parent="."]

[node name="1" type="Button" parent="Dobles"]
offset_left = 616.0
offset_top = 70.0
offset_right = 692.0
offset_bottom = 93.0
rotation = 0.296706
flat = true

[node name="2" type="Button" parent="Dobles"]
offset_left = 684.0
offset_top = 534.0
offset_right = 756.0
offset_bottom = 557.0
rotation = -0.640536
flat = true

[node name="3" type="Button" parent="Dobles"]
offset_left = 539.0
offset_top = 557.0
offset_right = 611.0
offset_bottom = 580.0
flat = true

[node name="4" type="Button" parent="Dobles"]
offset_left = 756.0
offset_top = 148.0
offset_right = 828.0
offset_bottom = 171.0
rotation = 0.897099
flat = true

[node name="5" type="Button" parent="Dobles"]
offset_left = 462.0
offset_top = 94.0
offset_right = 534.0
offset_bottom = 117.0
rotation = -0.321141
flat = true

[node name="6" type="Button" parent="Dobles"]
offset_left = 828.0
offset_top = 290.0
offset_right = 900.0
offset_bottom = 313.0
rotation = 1.5708
flat = true

[node name="7" type="Button" parent="Dobles"]
offset_left = 409.0
offset_top = 492.0
offset_right = 481.0
offset_bottom = 515.0
rotation = 0.640536
flat = true

[node name="8" type="Button" parent="Dobles"]
offset_left = 341.0
offset_top = 438.0
offset_right = 413.0
offset_bottom = 461.0
rotation = -1.86052
flat = true

[node name="9" type="Button" parent="Dobles"]
offset_left = 347.0
offset_top = 203.0
offset_right = 419.0
offset_bottom = 226.0
rotation = -0.897099
flat = true

[node name="10" type="Button" parent="Dobles"]
offset_left = 784.0
offset_top = 431.0
offset_right = 856.0
offset_bottom = 454.0
rotation = -1.28282
flat = true

[node name="11" type="Button" parent="Dobles"]
offset_left = 345.0
offset_top = 289.0
offset_right = 417.0
offset_bottom = 312.0
rotation = 1.5708
flat = true

[node name="12" type="Button" parent="Dobles"]
offset_left = 397.0
offset_top = 140.0
offset_right = 469.0
offset_bottom = 163.0
rotation = -0.6353
flat = true

[node name="13" type="Button" parent="Dobles"]
offset_left = 806.0
offset_top = 288.0
offset_right = 878.0
offset_bottom = 311.0
rotation = -1.90415
flat = true

[node name="14" type="Button" parent="Dobles"]
offset_left = 367.0
offset_top = 220.0
offset_right = 439.0
offset_bottom = 243.0
rotation = 1.90415
flat = true

[node name="15" type="Button" parent="Dobles"]
offset_left = 742.0
offset_top = 491.0
offset_right = 814.0
offset_bottom = 514.0
rotation = -1.01578
flat = true

[node name="16" type="Button" parent="Dobles"]
offset_left = 366.0
offset_top = 432.0
offset_right = 438.0
offset_bottom = 455.0
rotation = 0.888373
flat = true

[node name="17" type="Button" parent="Dobles"]
offset_left = 613.0
offset_top = 551.0
offset_right = 685.0
offset_bottom = 574.0
rotation = -0.253073
flat = true

[node name="18" type="Button" parent="Dobles"]
offset_left = 694.0
offset_top = 101.0
offset_right = 766.0
offset_bottom = 124.0
rotation = 0.633555
flat = true

[node name="19" type="Button" parent="Dobles"]
offset_left = 468.0
offset_top = 533.0
offset_right = 540.0
offset_bottom = 556.0
rotation = 0.331613
flat = true

[node name="20" type="Button" parent="Dobles"]
offset_left = 539.0
offset_top = 75.0
offset_right = 611.0
offset_bottom = 98.0
flat = true

[node name="Leyenda Dardos" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 445.0
offset_right = 140.0
offset_bottom = 577.0
theme_override_font_sizes/font_size = 30
text = "Dardo 1->
Dardo 2->
Dardo 3->"

[node name="Dardo1" type="Label" parent="Leyenda Dardos"]
layout_mode = 0
offset_left = 148.0
offset_top = 2.0
offset_right = 224.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 30
text = "00:00"

[node name="Dardo2" type="Label" parent="Leyenda Dardos"]
layout_mode = 0
offset_left = 148.0
offset_top = 46.0
offset_right = 224.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 30
text = "00:00"

[node name="Dardo3" type="Label" parent="Leyenda Dardos"]
layout_mode = 0
offset_left = 148.0
offset_top = 91.0
offset_right = 224.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 30
text = "00:00"

[node name="OUT" type="Button" parent="."]
layout_mode = 0
offset_left = 931.0
offset_top = 55.0
offset_right = 1134.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 50
text = "OUT >>"

[node name="BULL" type="Button" parent="."]
layout_mode = 0
offset_left = 930.0
offset_top = 210.0
offset_right = 1135.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 50
text = "BULL"

[node name="DOUBLE BULL" type="Button" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 323.0
offset_right = 1139.0
offset_bottom = 423.0
theme_override_font_sizes/font_size = 30
text = "DOUBLE BULL"

[connection signal="pressed" from="Triples/1" to="." method="_on__pressed1t"]
[connection signal="pressed" from="Triples/2" to="." method="_on__pressed2t"]
[connection signal="pressed" from="Triples/3" to="." method="_on__pressed3t"]
[connection signal="pressed" from="Triples/4" to="." method="_on__pressed4t"]
[connection signal="pressed" from="Triples/5" to="." method="_on__pressed5t"]
[connection signal="pressed" from="Triples/6" to="." method="_on__pressed6t"]
[connection signal="pressed" from="Triples/7" to="." method="_on__pressed7t"]
[connection signal="pressed" from="Triples/8" to="." method="_on__pressed8t"]
[connection signal="pressed" from="Triples/9" to="." method="_on__pressed9t"]
[connection signal="pressed" from="Triples/10" to="." method="_on__pressed10t"]
[connection signal="pressed" from="Triples/11" to="." method="_on__pressed11t"]
[connection signal="pressed" from="Triples/12" to="." method="_on__pressed12t"]
[connection signal="pressed" from="Triples/13" to="." method="_on__pressed13t"]
[connection signal="pressed" from="Triples/14" to="." method="_on__pressed14t"]
[connection signal="pressed" from="Triples/15" to="." method="_on__pressed15t"]
[connection signal="pressed" from="Triples/16" to="." method="_on__pressed16t"]
[connection signal="pressed" from="Triples/17" to="." method="_on__pressed17t"]
[connection signal="pressed" from="Triples/18" to="." method="_on__pressed18t"]
[connection signal="pressed" from="Triples/19" to="." method="_on__pressed19t"]
[connection signal="pressed" from="Triples/20" to="." method="_on__pressed20t"]
[connection signal="pressed" from="Simples/1" to="." method="_on__pressed1s"]
[connection signal="pressed" from="Simples/2" to="." method="_on__pressed2s"]
[connection signal="pressed" from="Simples/3" to="." method="_on__pressed3s"]
[connection signal="pressed" from="Simples/4" to="." method="_on__pressed4s"]
[connection signal="pressed" from="Simples/5" to="." method="_on__pressed5s"]
[connection signal="pressed" from="Simples/6" to="." method="_on__pressed6s"]
[connection signal="pressed" from="Simples/7" to="." method="_on__pressed7s"]
[connection signal="pressed" from="Simples/8" to="." method="_on__pressed8s"]
[connection signal="pressed" from="Simples/9" to="." method="_on__pressed9s"]
[connection signal="pressed" from="Simples/10" to="." method="_on__pressed10s"]
[connection signal="pressed" from="Simples/11" to="." method="_on__pressed11s"]
[connection signal="pressed" from="Simples/12" to="." method="_on__pressed12s"]
[connection signal="pressed" from="Simples/13" to="." method="_on__pressed13s"]
[connection signal="pressed" from="Simples/14" to="." method="_on__pressed14s"]
[connection signal="pressed" from="Simples/15" to="." method="_on__pressed15s"]
[connection signal="pressed" from="Simples/16" to="." method="_on__pressed16s"]
[connection signal="pressed" from="Simples/17" to="." method="_on__pressed17s"]
[connection signal="pressed" from="Simples/18" to="." method="_on__pressed18s"]
[connection signal="pressed" from="Simples/19" to="." method="_on__pressed19s"]
[connection signal="pressed" from="Simples/20" to="." method="_on__pressed20s"]
[connection signal="pressed" from="Dobles/1" to="." method="_on__pressed1d"]
[connection signal="pressed" from="Dobles/2" to="." method="_on__pressed2d"]
[connection signal="pressed" from="Dobles/3" to="." method="_on__pressed3d"]
[connection signal="pressed" from="Dobles/4" to="." method="_on__pressed4d"]
[connection signal="pressed" from="Dobles/5" to="." method="_on__pressed5d"]
[connection signal="pressed" from="Dobles/6" to="." method="_on__pressed6d"]
[connection signal="pressed" from="Dobles/7" to="." method="_on__pressed7d"]
[connection signal="pressed" from="Dobles/8" to="." method="_on__pressed8d"]
[connection signal="pressed" from="Dobles/9" to="." method="_on__pressed9d"]
[connection signal="pressed" from="Dobles/10" to="." method="_on__pressed10d"]
[connection signal="pressed" from="Dobles/11" to="." method="_on__pressed11d"]
[connection signal="pressed" from="Dobles/12" to="." method="_on__pressed12d"]
[connection signal="pressed" from="Dobles/13" to="." method="_on__pressed13d"]
[connection signal="pressed" from="Dobles/14" to="." method="_on__pressed14d"]
[connection signal="pressed" from="Dobles/15" to="." method="_on__pressed15d"]
[connection signal="pressed" from="Dobles/16" to="." method="_on__pressed16d"]
[connection signal="pressed" from="Dobles/17" to="." method="_on__pressed17d"]
[connection signal="pressed" from="Dobles/18" to="." method="_on__pressed18d"]
[connection signal="pressed" from="Dobles/19" to="." method="_on__pressed19d"]
[connection signal="pressed" from="Dobles/20" to="." method="_on__pressed20d"]
[connection signal="pressed" from="OUT" to="." method="_on_out_pressed"]
[connection signal="pressed" from="BULL" to="." method="_on_bull_pressed"]
[connection signal="pressed" from="DOUBLE BULL" to="." method="_on_double_bull_pressed"]
